# SPF-Framework

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/Localization/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt_br.json  ru.json  tr.json  uk.json  zh.json
cmake/: apply_patch_if_needed.cmake
cmake/patches/: imgui_md.cpp.patch  md4c.CMakeLists.txt
docs/api/: SPF_Camera_API.md  SPF_Config_API.md  SPF_Formatting_API.md  SPF_GameConsole_API.md  SPF_GameLog_API.md  SPF_Hooks_API.md  SPF_JsonReader_API.md  SPF_KeyBinds_API.md  SPF_Localization_API.md  SPF_Logger_API.md  SPF_Manifest_API.md  SPF_Plugin.md  SPF_Telemetry_API.md  SPF_UI_API.md  SPF_VirtInput_API.md
include/SPF/: Namespace.hpp  Types.hpp
include/SPF/Config/: ComponentInfo.hpp  ConfigService.hpp  EnumMappings.hpp  FrameworkManifest.hpp  IConfigService.hpp  IConfigurable.hpp  ManifestData.hpp
include/SPF/Core/: Core.hpp  InitializationReport.hpp
include/SPF/Events/: ConfigEvents.hpp  EventManager.hpp  EventProxyBase.hpp  PluginEvents.hpp  SystemEvents.hpp  TelemetryEvents.hpp  UIEvents.hpp
include/SPF/GameCamera/: DebugCameraMode.hpp  DebugHudPosition.hpp  GameCameraBehind.hpp  GameCameraBumper.hpp  GameCameraCabin.hpp  GameCameraDebug.hpp  GameCameraDebugAnimation.hpp  GameCameraDebugState.hpp  GameCameraFree.hpp  GameCameraInterior.hpp  GameCameraManager.hpp  GameCameraTV.hpp  GameCameraTop.hpp  GameCameraType.hpp  GameCameraWheel.hpp  GameCameraWindow.hpp  IGameCamera.hpp
include/SPF/GameConsole/: GameConsole.hpp
include/SPF/Handles/: ConfigHandle.hpp  GameLogCallbackHandle.hpp  IHandle.hpp  InputDeviceHandle.hpp  KeyBindsHandle.hpp  LocalizationHandle.hpp  LoggerHandle.hpp  TelemetryHandle.hpp  WindowHandle.hpp
include/SPF/Hooks/: BaseHook.hpp  CameraHooks.hpp  D3D11Hook.hpp  D3D12Hook.hpp  DInput8Hook.hpp  GameLogHook.hpp  HookManager.hpp  IHook.hpp  OpenGLHook.hpp  PluginHook.hpp  User32Hook.hpp  XInputHook.hpp
include/SPF/Input/: IInputConsumer.hpp  InputEvents.hpp  InputManager.hpp
include/SPF/Localization/: LocalizationManager.hpp
include/SPF/Logging/: Logger.hpp  LoggerFactory.hpp
include/SPF/Modules/: GameLogEventManager.hpp  GamepadInput.hpp  HandleManager.hpp  IBindableInput.hpp  IInputService.hpp  ITelemetryService.hpp  InputFactory.hpp  JoystickInput.hpp  KeyBindsManager.hpp  KeyboardInput.hpp  MouseInput.hpp  PerformanceMonitor.hpp  PluginManager.hpp  UpdateManager.hpp
include/SPF/Renderer/: D3D11RendererImpl.hpp  D3D12RendererImpl.hpp  OpenGLRendererImpl.hpp  RenderAPI.hpp  Renderer.hpp  RendererBase.hpp
include/SPF/SPF_API/: SPF_Config_API.h  SPF_JsonReader_API.h  SPF_Manifest_API.h  SPF_Plugin.h  SPF_TelemetryData.h  SPF_Telemetry_API.h
include/SPF/System/: ApiService.hpp  GamepadButton.hpp  GamepadButtonMapping.hpp  JoystickButtonMapping.hpp  Keyboard.hpp  Mouse.hpp  MouseButtonMapping.hpp  PathManager.hpp  VirtualKeyMapping.hpp
include/SPF/Telemetry/: ConfigAttributeReader.hpp  ControlsProcessor.hpp  EventsProcessor.hpp  GameContext.hpp  GameDataProcessor.hpp  GearboxProcessor.hpp  JobProcessor.hpp  SCSTelemetryService.hpp  Sdk.hpp  TrailerProcessor.hpp  TruckProcessor.hpp
include/SPF/UI/: BaseWindow.hpp  CameraWindow.hpp  GameConsoleWindow.hpp  HooksWindow.hpp  IWindow.hpp  Icons.hpp  ImGuiInputConsumer.hpp  LoggerWindow.hpp  MainWindow.hpp  MarkdownRenderer.hpp  PluginProxyWindow.hpp  PluginsWindow.hpp  SettingsWindow.hpp  TelemetryWindow.hpp  UIElements.hpp  UIManager.hpp  UIStyle.hpp  UITypographyHelper.hpp
include/SPF/Utils/: Delegate.hpp  PatternFinder.hpp  Signal.hpp  Vec2.hpp  Vec3.hpp
installer/: build.ps1  installer.iss  readme.txt
plugins/: CMakeLists.txt
plugins/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.hpp
plugins/ExamplePlugin/localization/: en.json  uk.json
plugins/MyPlugin/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.hpp
src/: dllmain.cpp
src/Config/: ConfigService.cpp
src/Core/: Core.cpp
src/Data/GameData/: GameDataCameraService.cpp  GameObjectVehicleService.cpp
src/Events/: EventManager.cpp
src/Events/Proxies/: WndProcEventProxy.cpp
src/GameCamera/: GameCameraBehind.cpp  GameCameraBumper.cpp  GameCameraCabin.cpp  GameCameraDebug.cpp  GameCameraDebugAnimation.cpp  GameCameraDebugState.cpp  GameCameraFree.cpp  GameCameraInterior.cpp  GameCameraManager.cpp  GameCameraTV.cpp  GameCameraTop.cpp  GameCameraWheel.cpp  GameCameraWindow.cpp
src/GameConsole/: GameConsole.cpp
src/Handles/: GameLogCallbackHandle.cpp
src/Hooks/: BaseHook.cpp  CameraHooks.cpp  D3D11Hook.cpp  D3D12Hook.cpp  DInput8Hook.cpp  GameLogHook.cpp  HookManager.cpp  OpenGLHook.cpp  PluginHook.cpp  User32Hook.cpp  XInputHook.cpp
src/Input/: InputManager.cpp  InputManager.cpp.bak
src/Input/SCS/: SCSInputService.cpp  VirtualDevice.cpp
src/Localization/: LocalizationManager.cpp
src/Logging/: Logger.cpp  LoggerFactory.cpp
src/Logging/Sinks/: FileSink.cpp  LoggerWindowSink.cpp
src/Modules/: GameLogEventManager.cpp  GamepadInput.cpp  HandleManager.cpp  IBindableInput.cpp  JoystickInput.cpp  KeyBindsManager.cpp  KeyboardInput.cpp  MouseInput.cpp  PerformanceMonitor.cpp  PluginManager.cpp  UpdateManager.cpp
src/Modules/API/: CameraApi.cpp  ConfigApi.cpp  FormattingApi.cpp  (+11 more)
src/Renderer/: D3D11RendererImpl.cpp  D3D12RendererImpl.cpp  OpenGLRendererImpl.cpp  Renderer.cpp
src/System/: ApiService.cpp  GamepadButtonMapping.cpp  JoystickButtonMapping.cpp  Keyboard.cpp  MouseButtonMapping.cpp  PathManager.cpp  VirtualKeyMapping.cpp
src/Telemetry/: ConfigAttributeReader.cpp  ControlsProcessor.cpp  EventsProcessor.cpp  GameContext.cpp  GameDataProcessor.cpp  GearboxProcessor.cpp  JobProcessor.cpp  SCSTelemetryService.cpp  TrailerProcessor.cpp  TruckProcessor.cpp
src/UI/: BaseWindow.cpp  CameraWindow.cpp  GameConsoleWindow.cpp  HooksWindow.cpp  ImGuiInputConsumer.cpp  LoggerWindow.cpp  MainWindow.cpp  MarkdownRenderer.cpp  PluginsWindow.cpp  SettingsWindow.cpp  TelemetryWindow.cpp  UIElements.cpp  UIManager.cpp  UIStyle.cpp  UITypographyHelper.cpp
src/Utils/: PatternFinder.cpp
(+72 files in other folders)
